# OOP_2024

./: CMakeLists.txt  main.cpp
auditoriski/: 1.cpp  10.cpp  11.cpp  12.cpp  13.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp
labs/: lab1_1.cpp  lab1_2.cpp  lab1_3.cpp  lab2_1.cpp  lab2_2.cpp  lab2_3.cpp  lab2_4.cpp  lab3_1.cpp  lab3_2.cpp  lab4_1.cpp  lab7_1.cpp  lab7_2.cpp  lab8_1.cpp  lab8_2.cpp
vezbi/: DebitCard.cpp  JetCar.cpp  MediaSegment.cpp  academicLibrary.cpp  animal.cpp  biblioteka.cpp  card.cpp  date.cpp  datum.cpp  ekipa.cpp  embg.cpp  employee.cpp  evaluator.cpp  exam-file.cpp  fileRead.cpp  fileVowels.cpp  gender.cpp  geomShape.cpp  group.cpp  hotelReservation.cpp  izlezna.txt  library.cpp  museum.cpp  post.cpp  product.cpp  products.cpp  sneakers.cpp  socialMedia.cpp  store-file.cpp  student.cpp  students.cpp  tennisPlayer.cpp  triangle.cpp  uchenici.cpp  vehicle.cpp  webserver.cpp  word.cpp
vezbi_ispit/: customer.cpp  delo.cpp  driver.cpp  finki-education.cpp  fudbal.cpp  game.cpp  image.cpp  karticka.cpp  koncert.cpp  library.cpp  museum.cpp  oglas.cpp  pizza.cpp  post.cpp  product.cpp  servis.cpp  sms.cpp  student.cpp  studentKurs.cpp  transport.cpp  trud.cpp
