cmake_minimum_required(VERSION 3.26)
project(OOP)

set(CMAKE_CXX_STANDARD 17)

add_executable(zadaca1 auditoriski/1.cpp)
add_executable(zadaca2 auditoriski/2.cpp)
add_executable(zadaca3 auditoriski/3.cpp)
add_executable(lab1_1 labs/lab1_1.cpp)
add_executable(lab1_2 labs/lab1_2.cpp)
add_executable(lab1_3 labs/lab1_3.cpp)
add_executable(zadaca4 auditoriski/4.cpp)
add_executable(zadaca5 auditoriski/5.cpp)
add_executable(zadaca6 auditoriski/6.cpp)
add_executable(zadaca7 auditoriski/7.cpp)
add_executable(lab2_1 labs/lab2_1.cpp)
add_executable(lab2_2 labs/lab2_2.cpp)
add_executable(lab2_3 labs/lab2_3.cpp)
add_executable(lab2_4 labs/lab2_4.cpp)
add_executable(zadaca8 auditoriski/8.cpp)
add_executable(lab3_1 labs/lab3_1.cpp)
add_executable(lab3_2 labs/lab3_2.cpp)
add_executable(lab4_1 labs/lab4_1.cpp)
add_executable(zadaca9 auditoriski/9.cpp)
add_executable(zadaca10 auditoriski/10.cpp)
add_executable(zadaca11 auditoriski/11.cpp)
add_executable(zadaca12 auditoriski/12.cpp)
add_executable(zadachaaa main.cpp)
add_executable(lab7_1 labs/lab7_1.cpp)
add_executable(lab7_2 labs/lab7_2.cpp)
add_executable(zadacha13 auditoriski/13.cpp)
add_executable(lab8_1 labs/lab8_1.cpp)
add_executable(lab8_2 labs/lab8_2.cpp)
add_executable(triagolnik vezbi/triangle.cpp)
add_executable(vraboten vezbi/employee.cpp)
add_executable(sredba vezbi/date.cpp)
add_executable(ekipa vezbi/ekipa.cpp)
add_executable(biblioteka vezbi/biblioteka.cpp)
add_executable(studenti vezbi/students.cpp)
add_executable(student vezbi/student.cpp)
add_executable(vehicle vezbi/vehicle.cpp)
add_executable(gender vezbi/gender.cpp)
add_executable(tennis vezbi/tennisPlayer.cpp)
add_executable(debitcard vezbi/DebitCard.cpp)
add_executable(hotel vezbi/hotelReservation.cpp)
add_executable(socialmedia vezbi/socialMedia.cpp)
add_executable(shape vezbi/geomShape.cpp)
add_executable(animal vezbi/animal.cpp
        vezbi/animal.cpp)
add_executable(vozila vezbi/JetCar.cpp)
add_executable(product vezbi/product.cpp)
add_executable(embg vezbi/embg.cpp)
add_executable(samoglaski_datoteka vezbi/fileVowels.cpp)
add_executable(chitanje vezbi/fileRead.cpp)
add_executable(library vezbi/library.cpp)
add_executable(post vezbi/post.cpp)
add_executable(store vezbi/store-file.cpp)
add_executable(exam vezbi/exam-file.cpp)
add_executable(academicLibrary vezbi/academicLibrary.cpp)
add_executable(museum vezbi/museum.cpp)
add_executable(sneakers vezbi/sneakers.cpp)
add_executable(evaluator vezbi/evaluator.cpp)
add_executable(datum vezbi/datum.cpp)
add_executable(webserver vezbi/webserver.cpp)
add_executable(word vezbi/word.cpp)
add_executable(uchenici vezbi/uchenici.cpp)
add_executable(card vezbi/card.cpp)
add_executable(products vezbi/products.cpp)
add_executable(group vezbi/group.cpp)
add_executable(mediasegment vezbi/MediaSegment.cpp)
add_executable(vezbi-ispit vezbi_ispit/finki-education.cpp
        vezbi_ispit/driver.cpp
        vezbi_ispit/pizza.cpp
        vezbi_ispit/trud.cpp
        vezbi_ispit/customer.cpp
        vezbi_ispit/game.cpp
        vezbi_ispit/karticka.cpp
        vezbi_ispit/koncert.cpp
        vezbi_ispit/oglas.cpp
        vezbi_ispit/delo.cpp
        vezbi_ispit/servis.cpp
        vezbi_ispit/image.cpp
        vezbi_ispit/sms.cpp
        vezbi_ispit/studentKurs.cpp
        vezbi_ispit/transport.cpp
        vezbi_ispit/fudbal.cpp
        vezbi_ispit/post.cpp
        vezbi_ispit/product.cpp
        vezbi_ispit/student.cpp
        vezbi_ispit/library.cpp
        vezbi_ispit/museum.cpp)
